c4prj1_deck/grade.txt
Grading at Tue Oct  1 20:18:55 UTC 2019
Compiling deck.c -> deck.o
Compiling eval.c -> eval.o
eval.c: In function ‘get_match_counts’:
eval.c:317:7: error: implicit declaration of function ‘print’ [-Werror=implicit-function-declaration]
       print("count: %d,  match[i]: %u\n", count, match[i]);
       ^
cc1: all warnings being treated as errors
Compilation of eval.c failed

Overall Grade: F
